--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=bd91f4f38630b006695f19b2f129d17f"
+    ></script>
     <title>Airbnb</title>
   </head>
   <body>
