[#3] fix: SearchBarDiv 내 if-else문 switch문으로 변경
- 가독성을 위해 resetfunction 내 if else -> switch 변경

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=bd91f4f38630b006695f19b2f129d17f"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%"
     ></script>
     <title>Airbnb</title>
   </head>
